--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,3 +27,7 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Buenos_Aires
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+          plugin_topics_sort: stars
