--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,3 +27,15 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Buenos_Aires
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_followup: yes
+          plugin_followup_sections: repositories
+          plugin_projects: yes
+          plugin_projects_limit: 4
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: starred
+          plugin_topics_sort: stars
